# p_shuhua

./: .gitignore  plan.drawio  pyproject.toml
src/p_shuhua/notebook/: .~lock.result_seller.xlsx#  for_test.xlsx  for_test_goodbye.xlsx  for_test_zoom.xlsx  result_goodbye_66.xlsx  result_goodbye_90.xlsx  result_seller_84%.xlsx  result_seller_97.xlsx  result_seller_99.xlsx  result_zoom_82.xlsx  result_zoom_98.xlsx  shuhua.ipynb  test_info.md
